# HBCyberTech-Website

./: README.md
client/: .env.example  .eslintrc.cjs  .gitignore  .prettierrc  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
client/src/: App.css  App.tsx  index.css  main.tsx  theme.ts
client/src/components/: NavBar.tsx  TransitionLink.tsx
client/src/pages/: About.tsx  AdminDashboard.tsx  AdminSignIn.tsx  Announcements.tsx  CreatePost.tsx  ExecForm.tsx  Feedback.tsx  Forum.tsx  GeneralDiscussion.tsx  GeneralForm.tsx  Home.tsx  Links.tsx  Post.tsx  Replies.tsx  SignIn.tsx  SignUp.tsx
client/src/pages/Account/: SignIn.tsx  SignUp.tsx
client/src/pages/Admin/: AccountList.tsx  AdminDashboard.tsx  AdminSignIn.tsx  ExecMemList.tsx  GenMemList.tsx
client/src/pages/Forum/: Announcements.tsx  CreateAnnouncement.tsx  CreatePost.tsx  Forum.tsx  GeneralDiscussion.tsx  Post.tsx
client/src/pages/General/: About.tsx  Home.tsx  Resources.tsx
client/src/pages/Misc/: ExecForm.tsx  GeneralForm.tsx  Links.tsx
server/: .env.example  .gitignore  Cargo.toml
server/src/: main.rs
server/src/models/: account.rs  admin.rs  announcement.rs  announcement_forum_post.rs  comment.rs  executive_member.rs  forum_post.rs  general_member.rs  mod.rs  resource.rs
server/src/routes/: account.rs  admin.rs  announcement.rs  announcement_forum_post.rs  executive_member.rs  forum_post.rs  general_member.rs  mod.rs  resource.rs
server/src/services/: db.rs  mod.rs
server/src/utilities/: admin_pagination_args.rs  claims.rs  mod.rs  pagination_args.rs
