[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.9.0"
chrono = "0.4.38"
dotenv = "0.15.0"
futures-util = "0.3.30"
lazy_static = "1.5.0"
mongodb = "3.0.1"
regex = "1.10.6"
serde = "1.0.208"
validator = "0.18.1"
validator_derive = "0.18.1"
