[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.9.0"
bcrypt = "0.15.1"
chrono = "0.4.38"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
futures-util = "0.3.30"
jsonwebtoken = "9.3.0"
lazy_static = "1.5.0"
mail-builder = "0.3.2"
mail-send = "0.4.9"
mongodb = "3.0.1"
pagination = "0.3.0"
regex = "1.10.6"
serde = "1.0.208"
serde_json = "1.0.127"
tokio = "1.39.3"
validator = "0.18.1"
validator_derive = "0.18.1"
